force-app/main/default/objects/CreatePicklistValue__c/CreatePicklistValue__c.object-meta.xml
<CustomObject>
    <description>Created to add the values to the global picklist</description>
    <label>CreatPicklistValue</label>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CreatePicklistValues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>