force-app/main/default/objects/CreatePicklistValue__c/fields/Added__c.field-meta.xml
<CustomField>
    <fullName>Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added</label>
    <type>Checkbox</type>
</CustomField>