force-app/main/default/objects/CreatePicklistValue__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>NewValue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>