force-app/main/default/objects/CreatePicklistValue__c/fields/PicklistValueSet__c.field-meta.xml
<CustomField>
    <fullName>PicklistValueSet__c</fullName>
    <description>Master detail relation with PicklistValueSet object</description>
    <label>PicklistValueSet</label>
    <referenceTo>PicklistValueSet__c</referenceTo>
    <relationshipLabel>CreatePicklistValues</relationshipLabel>
    <relationshipName>CreatePicklistValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>